--- a/flood-alert/package.json
+++ b/flood-alert/package.json
@@ -1,12 +1,28 @@
 {
   "name": "flood-alert",
   "version": "1.0.0",
-  "description": "## Integrantes - Henrique de Sousa - RM: 556937 - Bruno Cont - RM: 555324 - Beatriz Porto - RM: 556743",
-  "main": "App.js",
+  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "expo": "~51.0.0",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  }
 }
